<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.quangln2.downloadmanagerrefactor.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/DialogBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/addNewDownloadFileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add new download file"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/linkTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Link"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addNewDownloadFileTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/storagePolicyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/addNewDownloadFileButton"
            app:layout_constraintTop_toBottomOf="@+id/linkTextField">

            <TextView
                android:id="@+id/noteAboveAndroid10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/note_above_android_10"
                android:textColor="@color/failed"
                android:textStyle="bold"
                android:visibility="gone"
                tools:layout_editor_absoluteX="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/downloadToTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Download to: Downloads"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linkTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endIcon"
                    style="@style/EndIconStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_baseline_folder_24" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addNewDownloadFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:background="@android:color/transparent"
            android:text="OK"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toStartOf="@id/cancelAddNewDownloadFileButton"
            app:layout_constraintTop_toBottomOf="@id/storagePolicyView"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelAddNewDownloadFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="CANCEL"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storagePolicyView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
